--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </header>
   <nav>
     <ul>
+      <li><a href="#selfuse">自用链接</a></li>
       <li><a href="#tools">实用工具</a></li>
       <li><a href="#ai-search">Ai搜索</a></li>
       <li><a href="#social">社交媒体</a></li>
@@ -22,6 +23,10 @@
     </ul>
   </nav>
   <main>
+    <section id="selfuse">
+      <h2 class="category-title">自用链接</h2>
+      <div class="link-grid"></div>
+    </section>
     <section id="tools">
       <h2 class="category-title">实用工具</h2>
       <div class="link-grid"></div>
@@ -54,6 +59,7 @@
       <input type="password" id="edit-password" name="edit_password" placeholder="编辑密码" required>
       <select id="category" name="category" required>
         <option value="">选择类别</option>
+        <option value="selfuse">自用链接</option>
         <option value="ai-search">Ai搜索</option>
         <option value="social">社交媒体</option>
         <option value="tools">实用工具</option>
@@ -69,7 +75,7 @@
   </div>
   <button id="toggle-edit">编辑模式</button>
   <footer>
-    <p>&copy; 2023 WebNav Hub. 保留所有权利。</p>
+    <p>&copy; 2025 WebNav Hub. 保留所有权利。</p>
     <nav>
       <a href="#">隐私政策</a>
       <a href="#">使用条款</a>
